# ETH-ComputationalMethodsEngineeringApplications

./: README.md
Project_1/project1_code/corona_dirk/: CMakeLists.txt  coronaoutbreak.hpp  dirk.cpp  dirkconv.cpp  dirksolver.hpp  forward_euler.cpp  forwardeulersolver.hpp  plot_convergence.m  plot_convergence.py  plot_populations.m  plot_populations.py
Project_1/project1_code/corona_dirk/unittest/: CMakeLists.txt  test_dirk.cpp  test_jacobian.cpp
Project_1/project1_code/heun_timestep/: CMakeLists.txt  heun.cpp  heunconv.cpp  make_stability.py  plot_convergence.m  plot_convergence.py  plot_u.m  plot_u.py
Project_2/project2_code/2d-FD-porous/: finite_difference.cpp  plot_error.m  plot_error.py  plot_fd2d.m
Project_2/project2_code/2d-linFEM/: CMakeLists.txt  H1_norm.hpp  L2_norm.hpp  Lshape.hpp  README.txt  constant_function.hpp  convergence.hpp  fem2d.cpp  fem_solve.hpp  grad_shape.hpp  load_vector.hpp  load_vector_assembly.hpp  plot_convergence.py  plot_on_mesh.m  plot_on_mesh.py  stiffness_matrix.hpp  stiffness_matrix_assembly.hpp
Project_2/project2_code/2d-linFEM/unittest/: CMakeLists.txt  TestL2Norm.cpp  TestShapeFunction.cpp
Project_2/project2_code/heat-eqn-1d-variable-coeff/: CMakeLists.txt  README.txt  crank_nicolson.cpp  create_poisson_matrix.cpp  forward_euler.cpp
Project_2/project2_code/heat-eqn-1d-variable-coeff/cmake/: GetEigen.cmake
Project_2/project2_code/heat-eqn-1d-variable-coeff/unittest/: CMakeLists.txt
Series_0/series0_code/linear_regression/: CMakeLists.txt  cat_plot.py
Series_0/series0_code/midpoint/: CMakeLists.txt  plot_error.m  plot_error.py  plot_error_compare.py
Series_0/series0_code/midpoint/cmake/: CommonHeader.cmake  Compiler.cmake
Series_0/series0_code/midpoint/midpoint/: midpoint.cpp
Series_0/series0_code/midpoint/test_convergence/: test_convergence.cpp
Series_0/series0_code/midpoint/test_single/: test_single.cpp
Series_1/series1_code/expl-impl-timestep/: CMakeLists.txt  harmonic_oscill.cpp
Series_1/series1_code/numerical_LA/: syssolve.cpp
Series_1/series1_code/trapezoidal/: CMakeLists.txt  exercise1e_plot.py  trapezoidal.cpp
Series_2/series2_code/multistep/: plot_convergence.py
Series_2/series2_code/ssprk3_timestep/: CMakeLists.txt  ssprk3.cpp
Series_3/series3_code/1d-FD/: CMakeLists.txt  README.txt  finite_difference.cpp
Series_3/series3_code/2d-FD_pure/: CMakeLists.txt  README.txt  finite_difference.cpp  plot_fd2d.py
Series_3/series3_code/2d-FD_pure/cmake/: GetEigen.cmake
Series_4/series4_code/1d-linFEM/: CMakeLists.txt  README.txt  fem.cpp  plot_fem.m  plot_fem.py
Series_5/series5_code/2d-poissonlFEM/: CMakeLists.txt  fem2d.cpp  fem_solve.hpp  grad_shape.hpp  load_vector.hpp  plot_on_mesh.m  shape.hpp  stiffness_matrix.hpp  stiffness_matrix_assembly.hpp
Series_5/series5_code/2d-poissonqFEM/: CMakeLists.txt  H1_norm.hpp  L2_norm.hpp  convergence.hpp  dirichlet_boundary.hpp  dofs.hpp  fem2d.cpp  fem_solve.hpp  grad_shape.hpp  load_vector.hpp  load_vector_assembly.hpp  plot_convergence.m  plot_convergence.py  plot_on_mesh.m  shape.hpp  stiffness_matrix.hpp  stiffness_matrix_assembly.hpp
Series_6/series6_code/heat-eqn-1d/: CMakeLists.txt  README.txt  heat_1dfd.cpp  sol_movie.m  sol_movie.py
Series_6/series6_code/linear-transp-1d/: CMakeLists.txt  linear_transport.cpp  sol_movie.m  writer.hpp
